# scpkit

./: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  dev_requirements.txt  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE  release-drafter.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: codeql.yml  linter.yaml  main.yml  publish.yml  release-drafter.yml  test.yaml
scpkit/: main.py
scpkit/src/: merge.py  util.py  validate.py  visualize.py
scps/account/: deny_change_own_contacts.json  deny_region_enable_disable.json
scps/cloudtrail/: deny_cloudtrail_interrupt.json
scps/codebuild/: deny_public_codebuild_projects.json
scps/comprehend/: require_private_vpc.json
scps/configservice/: deny_configservice_interrupt.json
scps/ec2/: deny_ec2_public_ami.json  deny_ec2_public_ip.json  deny_vpcflowlog_interrupt.json  prevent_new_internet_access_vpc.json  require_imdsv2_hop_limit.json  require_imdsv2_roledelivery.json  restrict_ami_account_owner.json
scps/efs/: deny_unencrypted_efs_creation.json
scps/global/: deny_leave_organization.json  deny_organization_access_role_modify.json  deny_root_account.json  region_restriction.json
scps/guardduty/: deny_guardduty_interrupt.json
scps/iam/: deny_access_analyzer_interrupt.json  deny_create_root_access_key.json  deny_create_user_and_access_key.json  deny_iam_users_login_profile.json
scps/lambda/: require_vpc_lambdas.json
scps/macie/: deny_maciev2_interrupt.json
scps/ram/: deny_ram_external_sharing.json
scptool/: main.py
tests/: test.py
(+17 files in other folders)
