[metadata]
name = scpkit
author = Aquia
author_email = info@aquia.us
url = https://www.aquia.us
project_urls = 
    Bug Tracker = https://github.com/aquia-inc/scpkit/issues
    Source = https://github.com/aquia-inc/scpkit
description = This package helps consolidate service control policies in AWS
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.2.0

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    scpkit = scpkit.main:main

[options.packages.find]
exclude =
    tests*
    my_package.tests*
